--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,11 @@
 {% block content %}
 <h1>Hi, {{user.nickname}}!</h1>
 <h1>this is value from file - {{read_value}}</h1>
+<form action = "http://localhost:5000/user/" method = "POST"
+         enctype = "multipart/form-data">
+         <input type = "file" name = "file" />
+         <input type = "submit"/>
+</form>
 {% for post in posts %}
 <div><p>{{post.author.nickname}} says: <b>{{post.body}}</b></p></div>
 {% endfor %}
