do better files system

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,10 @@
     </form>
     <p>Result Filename:&nbsp;<span id="resultFilename">No_file</span></p>
     <p>Result Filesize:&nbsp;<span id="resultFilesize">0</span></p>
-    <p>Result Hashsum_new: <span id="resulthashsum">0</span></p>
+    <p>Result Hashsum_new:&nbsp;<span id="resulthashsum">0</span></p>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="{{url_for('js_static', filename='app.js')}}"></script>
+
   </body>
 </html>
 
